--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "googleapis": "^59.0.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -54,6 +56,8 @@
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "jest-cucumber": "^3.0.1",
+    "puppeteer": "^13.4.1"
   }
 }
